--- a/CVX_Project_Model.ipynb
+++ b/CVX_Project_Model.ipynb
@@ -1972,6 +1972,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 160,
+   "id": "044785ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[141, 167],\n",
+       "       [139, 177]], dtype=int64)"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "cvx_cm = confusion_matrix(y_test, prediction_test)\n",
+    "cvx_cm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
    "id": "f554cebd",
    "metadata": {},
@@ -2000,26 +2024,7 @@
      ]
     }
    ],
-   "source": [
-    "# Create deep neural netwrok model#3\n",
-    "number_input_features = len(X_train[0])\n",
-    "hidden_nodes_layer1 = 8\n",
-    "hidden_nodes_layer2= 5\n",
-    "hidden_nodes_layer3= 3\n",
-    "\n",
-    "nn = tf.keras.Sequential()\n",
-    "\n",
-    "# First hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"sigmoid\"))\n",
-    "# Second hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
-    "# Third hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer3, activation=\"tanh\"))\n",
-    "# Output layer\n",
-    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
-    "# Check the structure of the model\n",
-    "nn.summary()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2029,7 +2034,7 @@
    "outputs": [],
    "source": [
     "# compile the model\n",
-    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"]) "
+    "# nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"]) "
    ]
   },
   {
@@ -2447,7 +2452,7 @@
    ],
    "source": [
     "# Train the model\n",
-    "fit_model = nn.fit(X_train_scaled,y_train,epochs=200)"
+    "# fit_model = nn.fit(X_train_scaled,y_train,epochs=200)"
    ]
   },
   {
